--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,12 @@
       "js": ["index.js"]
     }
   ],
+  "icons": {
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "action": {},
   "commands": {
     "like": {
       "suggested_key": "Alt+L",
